testing a possible solution for loading and redirecting kegiatan osis

--- a/data/hari-guru-2526.html
+++ b/data/hari-guru-2526.html
@@ -219,7 +219,7 @@
         </div>
     </footer>
 
-    <script src="../assets/js/main.js" data-kegiatan-location="kegiatan.txt"></script>
+    <script src="../assets/js/main.js"></script>
     <script src="../assets/js/kegiatan-osis.js"></script>
 </body>
 </html>
