--- a/komisib.html
+++ b/komisib.html
@@ -175,6 +175,6 @@
         </div>
     </footer>
 
-    <script src="assets/js/main.js" data-kegiatan-location="data/kegiatan.txt"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
