--- a/komisic.html
+++ b/komisic.html
@@ -185,6 +185,6 @@
         </div>
     </footer>
 
-    <script src="assets/js/main.js" data-kegiatan-location="data/kegiatan.txt"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
