--- a/struktur-organisasi.html
+++ b/struktur-organisasi.html
@@ -124,7 +124,7 @@
         </div>
     </footer>
 
-    <script src="assets/js/main.js" data-kegiatan-location="data/kegiatan.txt"></script>
+    <script src="assets/js/main.js"></script>
     <script src="assets/js/carousel.js"></script>
     <script src="assets/js/structure.js"></script>
 </body>
