fixed loading and redirecting kegiatan osis, fixed menu bar not loading

--- a/data/porak-sem-ganjil-2526.html
+++ b/data/porak-sem-ganjil-2526.html
@@ -648,7 +648,7 @@
         </div>
     </footer>
 
-    <script src="../assets/js/main.js"></script>
+    <script type="module" src="../assets/js/main.js"></script>
     <script src="../assets/js/kegiatan-osis.js"></script>
 </body>
 </html>
