--- a/komisia.html
+++ b/komisia.html
@@ -175,6 +175,6 @@
         </div>
     </footer>
 
-    <script src="assets/js/main.js"></script>
+    <script type="module" src="assets/js/main.js"></script>
 </body>
 </html>
