added a query parameter from switching between osis and mpk (struktur organisasi), added back komisi D which was accidentally deleted

--- a/komisia.html
+++ b/komisia.html
@@ -141,6 +141,8 @@
                             <p class="struktur-organisasi-class">VIII-F</p>
                         </div>
                     </div>
+                </div>
+                <div class="struktur-organisasi-horizontal">
                     <div class="struktur-organisasi-card">
                         <div class="struktur-organisasi-card-header">
                             <img src="assets/images/MPK/komisia/Akira Adikara Damarprawirp - Angotta Komise A.jpg" alt="Student Photo">
