--- a/komisic.html
+++ b/komisic.html
@@ -141,6 +141,8 @@
                             <p class="struktur-organisasi-class">VIII-BIL3</p>
                         </div>
                     </div>
+                </div>
+                <div class="struktur-organisasi-horizontal">
                     <div class="struktur-organisasi-card">
                         <div class="struktur-organisasi-card-header">
                             <img src="assets/images/MPK/komisic/Medina Zaheen Muchtar - Anggota Komisi C.jpg" alt="Student Photo">
@@ -161,6 +163,8 @@
                             <p class="struktur-organisasi-class">VII-G</p>
                         </div>
                     </div>
+                </div>
+                <div class="struktur-organisasi-horizontal">
                     <div class="struktur-organisasi-card">
                         <div class="struktur-organisasi-card-header">
                             <img src="assets/images/MPK/komisic/Kanaka Maisadipta Suseno - Anggota_.jpg" alt="Student Photo">
