--- a/komisie.html
+++ b/komisie.html
@@ -141,6 +141,8 @@
                             <p class="struktur-organisasi-class">VII-G</p>
                         </div>
                     </div>
+                </div>
+                <div class="struktur-organisasi-horizontal">
                     <div class="struktur-organisasi-card">
                         <div class="struktur-organisasi-card-header">
                             <img src="assets/images/MPK/komisie/Shandy Putri Aryan Jaya - Anggota Komisi E.jpg" alt="Student Photo">
@@ -161,6 +163,8 @@
                             <p class="struktur-organisasi-class">VII-BIL2</p>
                         </div>
                     </div>
+                </div>
+                <div class="struktur-organisasi-horizontal">
                     <div class="struktur-organisasi-card">
                         <div class="struktur-organisasi-card-header">
                             <img src="assets/images/MPK/komisie/Khairunissa Badzlin - Anggota Komisi E.jpg" alt="Student Photo">
