--- a/komisib.html
+++ b/komisib.html
@@ -141,6 +141,8 @@
                             <p class="struktur-organisasi-class">VIII-C</p>
                         </div>
                     </div>
+                </div>
+                <div class="struktur-organisasi-horizontal">
                     <div class="struktur-organisasi-card">
                         <div class="struktur-organisasi-card-header">
                             <img src="assets/images/MPK/komisib/Danendra Putra Sulaiman - Anggota Komisi B (1).png" alt="Student Photo">
