refactored code (all css and javascript). fixed how struktur organisasi is centered. synched spotlight and regular carousel in kegiatan osis. added keyboard controls to the regular carousel in kegiatan osis

--- a/sekbid1.html
+++ b/sekbid1.html
@@ -145,6 +145,8 @@
                             <p class="struktur-organisasi-class">VII-G</p>
                         </div>
                     </div>
+                </div>
+                <div class="struktur-organisasi-horizontal">
                     <div class="struktur-organisasi-card">
                         <div class="struktur-organisasi-card-header">
                             <img src="assets/images/OSIS/sekbid1/7B-Muhammad Rayyan Faeyza_ Anggota Sekbid 1.jpg" alt="Student Photo">
