--- a/sekbid3.html
+++ b/sekbid3.html
@@ -149,6 +149,8 @@
                             <p class="struktur-organisasi-class">VII-A</p>
                         </div>
                     </div>
+                </div>
+                <div class="struktur-organisasi-horizontal">
                     <div class="struktur-organisasi-card">
                         <div class="struktur-organisasi-card-header">
                             <img src="assets/images/OSIS/sekbid3/7D_M.Jibril Ar Raffa_ anggota sekbid 3.jpg" alt="Student Photo">
