--- a/sekbid4.html
+++ b/sekbid4.html
@@ -144,6 +144,8 @@
                             <p class="struktur-organisasi-class">VII-BIL1</p>
                         </div>
                     </div>
+                </div>
+                <div class="struktur-organisasi-horizontal">
                     <div class="struktur-organisasi-card">
                         <div class="struktur-organisasi-card-header">
                             <img src="assets/images/OSIS/sekbid4/7e_PutuRanwirAbhinava_anggotasegbid4.jpg" alt="Student Photo">
