--- a/sekbid5.html
+++ b/sekbid5.html
@@ -146,6 +146,8 @@
                             <p class="struktur-organisasi-class">VII-B</p>
                         </div>
                     </div>
+                </div>
+                <div class="struktur-organisasi-horizontal">
                     <div class="struktur-organisasi-card">
                         <div class="struktur-organisasi-card-header">
                             <img src="assets/images/OSIS/sekbid5/7D_Zytka Alaia A_ anggota sekbid 5.jpg" alt="Student Photo">
