--- a/sekbid7.html
+++ b/sekbid7.html
@@ -145,6 +145,8 @@
                             <p class="struktur-organisasi-class">VII-G</p>
                         </div>
                     </div>
+                </div>
+                <div class="struktur-organisasi-horizontal">
                     <div class="struktur-organisasi-card">
                         <div class="struktur-organisasi-card-header">
                             <img src="assets/images/OSIS/sekbid7/7Bil1_Azkayra Keeyash V._AnggotaSekbid7.png" alt="Student Photo">
