--- a/sekbid6.html
+++ b/sekbid6.html
@@ -144,6 +144,8 @@
                             <p class="struktur-organisasi-class">VII-BIL1</p>
                         </div>
                     </div>
+                </div>
+                <div class="struktur-organisasi-horizontal">
                     <div class="struktur-organisasi-card">
                         <div class="struktur-organisasi-card-header">
                             <img src="assets/images/OSIS/sekbid6/7F_Lakeisha Kataleya A._anggota sekbid 6.png" alt="Student Photo">
