added komisi proker

--- a/komisia.html
+++ b/komisia.html
@@ -93,7 +93,9 @@
                 <div class="sekbid-highlights">
                     <h3>Proker:</h3>
                     <ul>
-                        <li>Lorem ipsum dolor sit amet</li>
+                        <li><strong>Audit Laporan Keuangan</strong> - Meminta laporan bendahara dan mengevaluasi keuangan di setiap acara</li>
+                        <li><strong>Asistensi bendahara OSIS</strong> - Membantu bendahara OSIS untuk mengatur keuangan yang dikeluarkan atau masuk ke dalam OSIS dengan cara mendata laporan keuangan yang sudah keluar maupun masuk dari bendahara</li>
+                        <li><strong>Evaluasi Anggaran Acara</strong> - Mengevaluasi laporan keuangan di akhir acara dengan cara membandingkan anggaran dengan rencana, pencapaian target, serta mengumpulkan data keuangan pendapatan dan pengeluaran.</li>
                     </ul>
                 </div>
             </div>
