--- a/komisib.html
+++ b/komisib.html
@@ -93,7 +93,9 @@
                 <div class="sekbid-highlights">
                     <h3>Proker:</h3>
                     <ul>
-                        <li>Lorem ipsum dolor sit amet</li>
+                        <li><strong>Membuat Gform Pengumpulan Nilai Rata-rata Raport Bulanan</strong> - Membagikan G-Form pengumpulan nilai bagi seluruh pengurus OSIS dan MPK setiap adanya pembagian rapor bulanan, lalu mendata dan memeriksa kelengkapan pengumpulan nilai rata-rata raport bulanan siswa.</li>
+                        <li><strong>Membuat Laporan Hasil Pendataan Nilai Raport Bulanan</strong> - Menyajikan laporan dalam bentuk tabel yang berisi seluruh data nilai siswa dimulai dari awal periode per semester.</li>
+                        <li><strong>Penghargaan Siswa/i OSIS dan MPK dengan nilai tertinggi dan peraihan kenaikan nilai tertinggi</strong> - Proker yang akan dilaksanakan satu kali setiap 2 periode pembagian rapot bulanan.</li>
                     </ul>
                 </div>
             </div>
