--- a/komisic.html
+++ b/komisic.html
@@ -93,7 +93,9 @@
                 <div class="sekbid-highlights">
                     <h3>Proker:</h3>
                     <ul>
-                        <li>Lorem ipsum dolor sit amet</li>
+                        <li><strong>Program Kerja Laporan Bulanan</strong> - Laporan bulanan akan diisi setiap bulan oleh ketua sekbid mengenai kinerja wakil dan anggota, serta kegiatan yang dilakukan oleh sekbid tersebut yang dilengkapi foto bukti pelaksanaan kegiatan.</li>
+                        <li><strong>Program Kerja Rapat Bulanan</strong> - Rapat yang dilaksanakan jika ada ketua sekbid yang telat mengumpulkan laporan bulanan. Rapat ini dijalankan bersama Ketua Komisi C, anggota yang bersangkutan dengan pengumpulan laporan bulanan sekbid tsb., dan ketua sekbid tsb.</li>
+                        <li><strong>Mengamati Konsistensi Kinerja Harian/Mingguan</strong> - Membuat formulir online (Google Form) dengan pertanyaan ya/tidak sederhana yang harus diisi oleh setiap pengurus OSIS-MPK setiap dua minggu.</li>
                     </ul>
                 </div>
             </div>
