--- a/komisid.html
+++ b/komisid.html
@@ -93,7 +93,10 @@
                 <div class="sekbid-highlights">
                     <h3>Proker:</h3>
                     <ul>
-                        <li>Lorem ipsum dolor sit amet</li>
+                        <li><strong>Dokumentasi Kegiatan Sekolah dan Organisasi</strong> - Komisi D ikut serta dalam mendokumentasikan setiap kegiatan yang diselenggarakan oleh sekolah, OSIS, maupun MPK sebagai bentuk arsip dan laporan kegiatan</li>
+                        <li><strong>Membuat Folder untuk Menyimpan Dokumentasi dari Seluruh Acara</strong> - Membuat dan mengelola folder drive utama sebagai tempat penyimpanan semua dokumentasi dari tiap kegiatan yang berbeda</li>
+                        <li><strong>Mengawasi Komunikasi yang Terjadi di MPK-OSIS</strong> - Program ini bertujuan untuk mengawasi dan memastikan komunikasi antara MPK dan OSIS berjalan dengan baik</li>
+                        <li><strong>Melakukan Wawancara Setelah Selesai Acara yang Akan Dibuatkan Rekap Evaluasi Tiap Acara</strong> - Setelah kegiatan selesai, Komisi D melakukan wawancara singkat kepada siswa-siswa untuk mendengar saran dan kritik untuk acara selanjutnya</li>
                     </ul>
                 </div>
             </div>
