--- a/komisie.html
+++ b/komisie.html
@@ -93,7 +93,9 @@
                 <div class="sekbid-highlights">
                     <h3>Proker:</h3>
                     <ul>
-                        <li>Lorem ipsum dolor sit amet</li>
+                        <li><strong>Membuat G-form Setiap Selesai Acara/Kegiatan</strong> - G-form ini dikirim ke setiap kelas melalui MPK masing-masing kelas yang kemudian diisi oleh panitia acara yang bertanggung jawab dan peserta acara</li>
+                        <li><strong>Membuat Daftar Pengurus Panitia yang Kerjanya Kurang Efisien atau Tidak Bekerja Sama Sekali</strong> - Bagi pengurus panitia yang kerjanya kurang efisien, akan diberikan teguran atau peringatan dari ketua acara atau ketua, wakil ketua, dan anggota komisi E. Jika terjadi lebih dari 3 kali, maka akan mendapatkan sanksi</li>
+                        <li>Membuat laporan dari G-form dan daftar tersebut untuk dikirim kepada ketua acara atau ketua MPK, dan berdiskusi dengan anggota komisi E serta mengevaluasinya</li>
                     </ul>
                 </div>
             </div>
