--- a/sekbid8.html
+++ b/sekbid8.html
@@ -137,11 +137,11 @@
                 </div>
                 <div class="struktur-organisasi-card">
                     <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid8/7E_Dimitri I’zaz_Anggota Sekbid 8.jpg" alt="Student Photo">
+                        <img src="assets/images/OSIS/sekbid8/7E_Dimitri I'zaz_Anggota Sekbid 8.jpg" alt="Student Photo">
                     </div>
                     <div class="struktur-organisasi-card-content">
                         <div class="struktur-organisasi-badge">Anggota Sekbid 8</div>
-                        <h2 class="struktur-organisasi-name">Dimitri I’zaz</h2>
+                        <h2 class="struktur-organisasi-name">Dimitri I'zaz</h2>
                         <p class="struktur-organisasi-class">VII-E</p>
                     </div>
                 </div>
